<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="text_music">Music World</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_txt">00:00</string>
    <string name="end_txt">Loading..</string>
    <string name="song_album">Song Album</string>

    <string name="repeat_btn">Repeate</string>
    <string name="equlizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to my \nMusic Player</string>

    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

</resources>